# structcheck

./: .gitignore  .pylintrc  LICENSE  README.md  deploy_pypi.sh  pyproject.toml  run.py  test.py
.github/workflows/: pylint.yml
docs/source/: conf.py  index.rst  intro.rst
source/: recscan.py  report.py  structcheck.py
structcheck/: __init__.py  __main__.py  recscan.py  regex.py  report.py  structcheck.py  to_graphviz.py  utils.py
test/: test_structures.py
test/data/structure_classic/: structcheck.txt
test/data/structure_regex/: .structcheck.json  .structdata.json  structcheck.txt
test/data_fail/datetime_file/: structcheck.txt
test/data_fail/datetime_folder/: structcheck.txt
test/data_succes/datetime/: .structdata.json  structcheck.txt
test/data_succes/regex/: .structdata.json  structcheck.txt
test/data_succes/standard/: structcheck.txt
test/data_succes/structure_classic/: .structcheck.json  .structdata.json  structcheck.txt
test/data_succes/structure_regex/: .structdata.json  structcheck.txt
tests/: test_structures.py
tests/data_fail/datetime_file/: .structcheck.json  .structdata.json  graph.gv  structcheck.txt
tests/data_fail/datetime_folder/: .structdata.json  graph.gv  structcheck.txt
tests/data_succes/datetime/: .structcheck.json  .structdata.json  graph.gv  structcheck.txt
tests/data_succes/ignored/: .structcheck.json  .structdata.json  graph.gv  structcheck.txt
tests/data_succes/regex/: .structcheck.json  .structdata.json  graph.gv  structcheck.txt
tests/data_succes/standard/: .structcheck.json  .structdata.json  graph.gv  structcheck.txt
