[tool.poetry]
name = "structcheck"
version = "1.0.6"
description = "Project to check not presents and not allowed files and folders using regex. Include also some datums corresponding validations in folders and filenames. This project don't check files contents!"
authors = ["vincentBenet <vincent.benet@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.test.dependencies]
unittest = "^0.0"
pylint = "^2.15.3"


[tool.poetry.group.doc.dependencies]
Sphinx = "^5.2.2"


[[tool.poetry.source]]
name = "foo"
url = "https://test.pypi.org/simple/"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/pypa/structcheck"
"Bug Tracker" = "https://github.com/pypa/structcheck/issues"
"Author" = "https://github.com/vincentBenet"
