[tool.poetry]
name = "structcheck"
version = "1.0.19"
description = ""
authors = ["vincentBenet <vincent.benet@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
graphviz = "^0.20.1"

[tool.poetry.group.dev.dependencies]
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
